Add formatter plugin
Remove <pluginManagement> from pom.xml file due to problems with formatter plugin
Format all files