@@ -15,22 +15,23 @@ import java.util.Random;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-@Mapper(imports = {Collections.class, List.class, Stream.class, Collectors.class, Random.class})
+@Mapper(imports = { Collections.class, List.class, Stream.class, Collectors.class, Random.class })
 public interface QuestionMapper {
     @Mapping(source = "question", target = "answers", qualifiedByName = "answersMapMethod")
     QuestionView mapToView(Question question);
 
     @Named("answersMapMethod")
     default List<String> toView(Question question) {
-        List<String> collect = Stream.concat(Stream.concat(question.getWrongAnswers().stream(), question.getCorrectAnswers().stream()), Stream.of(question.getCorrectAnswer())).toList();
+        List<String> collect = Stream
+                .concat(Stream.concat(question.getWrongAnswers().stream(), question.getCorrectAnswers().stream()),
+                        Stream.of(question.getCorrectAnswer()))
+                .toList();
 
-        return Stream.concat(question.getWrongAnswers().stream(), Stream.of(question.getCorrectAnswer())).toList().stream()
-                .collect(Collectors.collectingAndThen(Collectors.toList(), collected -> {
+        return Stream.concat(question.getWrongAnswers().stream(), Stream.of(question.getCorrectAnswer())).toList()
+                .stream().collect(Collectors.collectingAndThen(Collectors.toList(), collected -> {
                     Collections.shuffle(collected);
                     return collected.stream();
-                }))
-                .limit(collect.size())
-                .toList();
+                })).limit(collect.size()).toList();
     }
 
     default List<Tag> mapToTags(List<String> value) {
@@ -47,8 +48,8 @@ public interface QuestionMapper {
     @Mapping(target = "wrongAnswers", source = "wrongAnswers")
     Question mapToEntity(QuestionCreateRequest request);
 
-    @Mapping(target = "correctAnswers", expression = "java(Stream.concat(question.getCorrectAnswers().stream(), " +
-            "Stream.of(question.getCorrectAnswer())).toList())")
+    @Mapping(target = "correctAnswers", expression = "java(Stream.concat(question.getCorrectAnswers().stream(), "
+            + "Stream.of(question.getCorrectAnswer())).toList())")
     @Mapping(target = "tags", expression = "java(mapToNames(question.getTags()))")
     QuestionAddResponse mapToResponse(Question question);
 
